@@ -135,7 +135,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "157"
+#define VCS_REVISION "158"
 
 /* Version number of package */
 #define VERSION "2.9"
