@@ -46,7 +46,7 @@ build: build-stamp
 build-stamp:  config.status
 	dh_testdir
 	@# Add here commands to compile the package.
-	$(MAKE)
+	$(MAKE) DPKGBUILD=true
 
 	touch build-stamp
 
